ポケモン追加

--- a/index.html
+++ b/index.html
@@ -359,6 +359,26 @@
             statusDatas.push(new Status(778, "ミミッキュ", 96));
             statusDatas.push(new Status(934, "イルカマン", 100));
             statusDatas.push(new Status(135, "サンダース", 130));
+            statusDatas.push(new Status(1002, "デカヌチャン", 94));
+            statusDatas.push(new Status(635, "サザンドラ", 98));
+            statusDatas.push(new Status(953, "モトトカゲ", 121));
+            statusDatas.push(new Status(59, "ウインディ", 95));
+            statusDatas.push(new Status(479, "ロトム", 86));
+            statusDatas.push(new Status(927, "クエスパトラ", 105));
+            statusDatas.push(new Status(373, "ボーマンダ", 100));
+            statusDatas.push(new Status(637, "ウルガモス", 100));
+            statusDatas.push(new Status(1007, "リククラゲ", 100));
+            statusDatas.push(new Status(149, "カイリュー", 80));
+            statusDatas.push(new Status(130, "ギャラドス", 81));
+            statusDatas.push(new Status(928, "リキキリン", 60));
+            statusDatas.push(new Status(700, "ニンフィア", 60));
+            statusDatas.push(new Status(1008, "ドドゲザン",50));
+            statusDatas.push(new Status(450, "カバルドン",47));
+            statusDatas.push(new Status(591, "モロバレル", 30));
+            statusDatas.push(new Status(423, "トリトドン", 39));
+            statusDatas.push(new Status(931, "ヘイラッシャ", 35));
+            statusDatas.push(new Status(952, "シャリタツ", 82));
+            statusDatas.push(new Status(212, "ハッサム", 65));
 
 
         }
