すばやさの計算が切り捨てられていなかったので修正

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@ opacity:0;
                     num *= 1.5;
 
                 }
+                num = Math.floor(num);
 
                 if (this.isTwice) {
                     num *= 2.0;
