--- a/index.html
+++ b/index.html
@@ -549,24 +549,24 @@ opacity:0;
             statusDatas.push(new Status(908, "マスカーニャ", 123,false));
             statusDatas.push(new Status(911, "ラウドボーン", 66,false));
             statusDatas.push(new Status(914, "ウェーニバル", 85, false));
-            statusDatas.push(new Status(663, "ファイアロー", 126, true));
+            statusDatas.push(new Status(663, "ファイアロー", 126, false));
             statusDatas.push(new Status(956, "パーモット", 105, false));
             statusDatas.push(new Status(820, "ヨクバリス", 20, false));
             statusDatas.push(new Status(823, "アーマーガア", 67, false));
             statusDatas.push(new Status(184, "マリルリ", 50, false));
             statusDatas.push(new Status(1009, "ドオー", 20, false));
             statusDatas.push(new Status(94, "ゲンガー", 110, false));
-            statusDatas.push(new Status(946, "イッカネズミ", 111, true));
+            statusDatas.push(new Status(946, "イッカネズミ", 111, false));
             statusDatas.push(new Status(398, "ムクホーク", 100, false));
             statusDatas.push(new Status(429, "ムウマージ", 105, false));
-            statusDatas.push(new Status(445, "ガブリアス", 102, true));
-            statusDatas.push(new Status(965, "キョジオーン", 35, true));
+            statusDatas.push(new Status(445, "ガブリアス", 102, false));
+            statusDatas.push(new Status(965, "キョジオーン", 35, false));
             statusDatas.push(new Status(1010, "コノヨザル", 90, true));
             statusDatas.push(new Status(1004, "グレンアルマ", 75, true));
             statusDatas.push(new Status(1005, "ソウブレイズ", 85, false));
             statusDatas.push(new Status(197, "ブラッキー", 65, false));
             statusDatas.push(new Status(967, "キラフロル", 86, false));
-            statusDatas.push(new Status(248, "バンギラス", 61, true));
+            statusDatas.push(new Status(248, "バンギラス", 61, false));
             statusDatas.push(new Status(887, "ドラパルト", 142, true));
             statusDatas.push(new Status(951, "セグレイブ", 87, true));
             statusDatas.push(new Status(977, "サーフゴー", 84, true));
@@ -585,8 +585,8 @@ opacity:0;
             statusDatas.push(new Status(1007, "リククラゲ", 100, false));
             statusDatas.push(new Status(149, "カイリュー", 80, true));
             statusDatas.push(new Status(130, "ギャラドス", 81, true));
-            statusDatas.push(new Status(928, "リキキリン", 60, false));
-            statusDatas.push(new Status(700, "ニンフィア", 60, true));
+            statusDatas.push(new Status(928, "リキキリン", 60, true));
+            statusDatas.push(new Status(700, "ニンフィア", 60, false));
             statusDatas.push(new Status(1008, "ドドゲザン", 50, true));
             statusDatas.push(new Status(450, "カバルドン", 47, false));
             statusDatas.push(new Status(591, "モロバレル", 30, true));
@@ -612,15 +612,15 @@ opacity:0;
             statusDatas.push(new Status(279, "ペリッパー", 65, false));
 
             //パラドクス
-            statusDatas.push(new Status(978, "イダイナキバ", 87, true));
-            statusDatas.push(new Status(979, "アラブルタケ", 55, true));
+            statusDatas.push(new Status(978, "イダイナキバ", 87, false));
+            statusDatas.push(new Status(979, "アラブルタケ", 55, false));
             statusDatas.push(new Status(981, "スナノケガワ", 101, false));
-            statusDatas.push(new Status(982, "サケブシッポ", 111, true));
+            statusDatas.push(new Status(982, "サケブシッポ", 111, false));
             statusDatas.push(new Status(983, "ハバタクカミ", 135, true));
             statusDatas.push(new Status(984, "チヲハウハネ", 81, false));
             statusDatas.push(new Status(985, "トドロクツキ", 119, false));
             statusDatas.push(new Status(986, "テツノワダチ", 106, false));
-            statusDatas.push(new Status(988, "テツノドクガ", 110, true));
+            statusDatas.push(new Status(988, "テツノドクガ", 110, false));
             statusDatas.push(new Status(989, "テツノカイナ", 50, true));
             statusDatas.push(new Status(990, "テツノコウベ", 108, false));
             statusDatas.push(new Status(991, "テツノイバラ", 72, false));
@@ -629,11 +629,35 @@ opacity:0;
             //準伝
             statusDatas.push(new Status(994, "ディンルー", 45, true));
             statusDatas.push(new Status(995, "パオジアン", 135, true));
-            statusDatas.push(new Status(996, "チオンジェン", 70, true));
+            statusDatas.push(new Status(996, "チオンジェン", 70, false));
             statusDatas.push(new Status(997, "イーユイ", 100, true));
             
+            //レギュレーションE
+            statusDatas.push(new Status(812, "ゴリランダー", 85, true));
+            statusDatas.push(new Status(356, "サマヨール", 25, true));
+            statusDatas.push(new Status(901, "ガチグマ", 50, true));
+            statusDatas.push(new Status(10901, "ガチグマ暁", 52, true));
+            statusDatas.push(new Status(1025, "ヤバソチャ", 70, true));
+            statusDatas.push(new Status(1011, "オーガポン", 110, true));
+            statusDatas.push(new Status(892, "ウーラオス", 97, true));
+            statusDatas.push(new Status(485, "ヒードラン", 77, true));
 
-
+            //レギュレーションF
+            statusDatas.push(new Status(727, "ガオガエン", 60, true));
+            statusDatas.push(new Status(641, "トルネロス化身", 111, true));
+            statusDatas.push(new Status(10645, "ランドロス霊獣", 91, true));
+            statusDatas.push(new Status(645, "ランドロス化身", 101, true));
+            statusDatas.push(new Status(1018, "タケルライコ", 75, true));
+            statusDatas.push(new Status(547, "エルフーン", 116, true));
+            statusDatas.push(new Status(244, "エンテイ", 100, true));
+            statusDatas.push(new Status(980, "ウネルミナモ", 109, true));
+            statusDatas.push(new Status(1019, "テツノカシラ", 98, true));
+            statusDatas.push(new Status(376, "メタグロス", 70, true));
+            statusDatas.push(new Status(380, "ラティアス", 110, true));
+            statusDatas.push(new Status(488, "クレセリア", 85, true));
+            statusDatas.push(new Status(639, "テラキオン", 108, true));
+            statusDatas.push(new Status(233, "ポリゴン2", 60, true));
+            statusDatas.push(new Status(1023, "ブリジュラス", 85, true));
         }
 
       
